--- a/source/components/city-section.pug
+++ b/source/components/city-section.pug
@@ -4,8 +4,8 @@ section.city-section
       h2.city-section__title.font-w-b-bold.font-s-70.text-up
         | Станьте партнёром 
         br
-        | франшизы  
-        span.font-s-74.color-black-text «EARTH PRINT»
+        | франшизы  
+        span.city-section__mark.font-s-74 «EARTH PRINT»
       .city-section__sub-title.font-w-bold.font-s-26
         | и получайте 
         span.color-l-blue от 160 000 рублей ежемесячно
