--- a/source/components/main-section.pug
+++ b/source/components/main-section.pug
@@ -9,8 +9,8 @@ section.main-section
         span.color-grey шелкографии 
         | с проверенной 
         br.no-br
-        | франшизой   
-        span.font-s-74.color-black-text «EARTH PRINT»
+        | франшизой   
+        span.main-section__mark.font-s-74 «EARTH PRINT»
       .main-section__sub-title.font-w-semi-bold.font-s-20-a
         | Узнайте как стать партнером студии 
         br.no-br
