--- a/source/stylus/components/about-section.styl
+++ b/source/stylus/components/about-section.styl
@@ -65,7 +65,7 @@
     flex-direction: column
     align-items: center
     gap: 7px
-    margin 15px 0 120px
+    margin 15px 0 155px
     +above($breakpoints.sm)
       margin 20px 0 30px
       flex-direction: row
@@ -214,12 +214,13 @@
   &__img
     position: absolute
     z-index -1
-    width: 200px;
+    width: 225px;
     height: auto;
-    top: 730px;
-    right: 0px;
+    bottom: 209px;
+    right: 48px;
     +above($breakpoints.sm)
       width: 550px;
+      bottom: unset
       top: 0;
       right: -150px;
     +above($breakpoints.md)
