--- a/source/stylus/components/main-section.styl
+++ b/source/stylus/components/main-section.styl
@@ -39,8 +39,6 @@
       left: -129px
 
   &__title
-    position relative
-    z-index 1
     padding 35px 0 15px
     +above($breakpoints.sm)
       padding 50px 0 25px
@@ -48,60 +46,37 @@
       padding 70px 0 35px
     +above($breakpoints.xxl)
       padding 129px 0 46px
+
+  &__mark
+    position relative
+    z-index 1
+    color: $color-black-text
     &:before
       content: ""
       position: absolute
       z-index -1
       background-color $color-l-blue
-      clip-path: polygon(0 0, 100% 0, 126% calc(100% - 30px), calc(100% - 30px) 160%, 0 100%);
-      width: 110px;
-      height: 24px;
-      top: 54px;
-      left: 195px;
+      clip-path: polygon(0 0, 100% 0, 100% calc(100% - 32%), calc(100% - 8%) 100%, 0 100%);
+      width: 110%;
+      height: 84%
+      top: 0
+      left: -5%;
       +above($breakpoints.sm)
-        clip-path: polygon(0 0, 100% 0, 108% calc(100% - 30px), calc(100% - 30px) 110%, 0 100%);
-        width: 234px;
-        height: 49px;
-        top: 146px;
-        left: 193px;
-      +above($breakpoints.md)
-        clip-path: polygon(0 0, 100% 0, 102% calc(100% - 30px), calc(100% - 30px) 102%, 0 100%);
-        width: 318px;
-        height: 68px;
-        top: 196px;
-        left: 259px;
-      +above($breakpoints.xxl)
-        width: 366px;
-        height: 72px;
-        top: 281px;
-        left: 301px;
+        height: 81%
+        top: 4%;
     &:after
       content: ""
       position: absolute
       z-index -2
       background-color #153EFF
-      clip-path: polygon(0 0, 100% 0, 126% calc(100% - 30px), calc(100% - 30px) 160%, 0 100%);
-      width: 110px;
-      height: 24px;
-      top: 56px;
-      left: 197px;
+      clip-path: polygon(0 0, 100% 0, 100% calc(100% - 32%), calc(100% - 8%) 100%, 0 100%);
+      width: 110%
+      height: 84%;
+      top: 6%
+      left: -3%
       +above($breakpoints.sm)
-        clip-path: polygon(0 0, 100% 0, 108% calc(100% - 30px), calc(100% - 30px) 110%, 0 100%);
-        width: 234px;
-        height: 49px;
-        top: 150px;
-        left: 197px;
-      +above($breakpoints.md)
-        clip-path: polygon(0 0, 100% 0, 102% calc(100% - 30px), calc(100% - 30px) 102%, 0 100%);
-        width: 318px;
-        height: 68px;
-        top: 200px;
-        left: 263px;
-      +above($breakpoints.xxl)
-        width: 366px;
-        height: 72px;
-        top: 285px;
-        left: 305px;
+        height: 81%;
+        top: 10%
 
   &__form
     width 100%
